--- a/portfolio css/style.css
+++ b/portfolio css/style.css
@@ -17,6 +17,11 @@
 }
  /* taxt style  */
 
+ .secondary-bg{
+  background: #FFF8F3;
+
+ }
+
  nav .text-primary{
   color:rgb(253, 110, 10) ;
 
@@ -86,3 +91,41 @@ nav ul li a{
   justify-content: space-between;
   align-items: center;
 }
+
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+
+}
+
+.about{
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+  margin-top: 130px;
+}
+
+.about-title{
+  color: #181818;
+  font-size: 35px;
+  font-weight: bolder;
+  font-family: "Work Sans", serif;
+  
+}
+
+
+
+.about-items{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.item-title{
+  font-size: 20px;
+}
+.item-description{
+  font-size: 20px;
+  font-weight: bold;
+}
+
