--- a/portfolio css/style.css
+++ b/portfolio css/style.css
@@ -13,7 +13,6 @@
  background: url('../images/developer.png'),url('../images/header_bg.png');
   background-repeat: no-repeat;
   background-position: top left, bottom right;
-
 }
  /* taxt style  */
 
@@ -184,7 +183,7 @@ footer{
 }
 
 footer input[type="text" ] ,footer input[type="email"] ,textarea {
-  background-color: white;
+  /* background-color: white; */
   height: 64px;
   display: block;
   width: 100%;
@@ -193,4 +192,5 @@ border: none;
 padding: 10px 20px;
 border-radius: 5px;
 font-size: 16px;
+
 }
