--- a/portfolio css/style.css
+++ b/portfolio css/style.css
@@ -10,11 +10,13 @@
 
 
 .header{
- background: url('../images/developer.png'),url('../images/header_bg.png');
+  background: url('../images/developer.png'),url('../images/header_bg.png');
   background-repeat: no-repeat;
   background-position: top left, bottom right;
-  width: 1600px;
-  margin: auto;
+  width: 100%;
+  
+
+  /* margin: auto; */
 }
  /* taxt style  */
 
@@ -55,6 +57,11 @@ font-weight: 600;
 font-size: 85px;
 font-weight: 700;
 }
+.btn-contact{
+  background: none;
+  color: #FD6E0A;
+  border: 1px solid #FD6E0A;
+}
 
 
 nav{
@@ -82,6 +89,7 @@ nav ul li a{
 
 .banner-pic{
   width: 600px;
+
 }
 .banner-content{
   max-width: 600px;
@@ -103,7 +111,8 @@ main{
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
-  margin-top: 130px;
+  margin-top: 200px;
+ 
 }
 
 .about-title{
@@ -115,11 +124,15 @@ main{
 }
 
 
-
 .about-items{
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+.style{
+  border:1px solid;
+  background: #FFFFFF;
+  box-sizing: border-box;
 }
 
 .item-title{
@@ -153,8 +166,11 @@ main{
 
 .card-item{
   padding: 35px;
-  box-shadow: 0px 6px 50px 0px #FFFFFF;
+ 
   border-radius: 5px;
+
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  
 }
 
 .resume{
